@@ -1,6 +1,7 @@
 === Version 0.7.6
 * Fixes
   * Fixed attach_to_window workes with partial url on Selenium (George Shakhnazaryan)
+  * Fixed double click works on Selenium (William Powell)
 
 === Version 0.7.5.1 / 2012-10-16
 * Fixes
